carousel links hinzugefügt

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <a class="image featured"><img src="images/carousel/elektronik_software.jpg" alt="" />
                 </a>
                 <header>
-                    <h3><a  >Team<br> Elektronik &amp; Software</a></h3>
+                    <h3><a href="team_elektronik_software.html">Team<br> Elektronik &amp; Software</a></h3>
                 </header>
 
             </article>
@@ -119,7 +119,7 @@
                 <a class="image featured"><img src="images/carousel/Fahrwerk.JPG" alt="" />
                 </a>
                 <header>
-                    <h3><a  >Team<br> Fahrwerk</a></h3>
+                    <h3><a href="team_fahrwerk.html" >Team<br> Fahrwerk</a></h3>
                 </header>
 
             </article>
@@ -128,7 +128,7 @@
                 <a class="image featured"><img src="images/carousel/Greiffer.png" alt="" />
                 </a>
                 <header>
-                    <h3><a  >Team<br> Mechanik Arm</a></h3>
+                    <h3><a  href="team_mechanik_arm.html">Team<br> Mechanik Arm</a></h3>
                 </header>
 
             </article>
@@ -137,7 +137,7 @@
                 <a class="image featured"><img src="images/carousel/Tueroeffner_Startbild.jpg" alt="" />
                 </a>
                 <header>
-                    <h3><a  >Team<br> Türöffner</a></h3>
+                    <h3><a  href="team_tueroeffner.html">Team<br> Türöffner</a></h3>
                 </header>
 
             </article>
@@ -146,7 +146,7 @@
                 <a class="image featured"><img src="images/carousel/Organisation_Finanzen.png" alt="" />
                 </a>
                 <header>
-                    <h3><a  >Team<br> Organisation &amp; Finanzen</a></h3>
+                    <h3><a  href="team_organisation_finanzen.html">Team<br> Organisation &amp; Finanzen</a></h3>
                 </header>
             </article>
 
@@ -154,7 +154,7 @@
                 <a class="image featured"><img src="images/carousel/Camera.png" alt="" />
                 </a>
                 <header>
-                    <h3><a  >Team<br> Kamerasteuerung</a></h3>
+                    <h3><a  href="team_kamerasteuerung.html">Team<br> Kamerasteuerung</a></h3>
                 </header>
             </article>
         </div>
