--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </article>
 
             <article>
-                <a class="image featured"><img src="images/carousel/Fahrwerk.JPG" alt="" />
+                <a class="image featured"><img src="images/carousel/Fahrwerk.jpg" alt="" />
                 </a>
                 <header>
                     <h3><a href="team_fahrwerk.html" >Team<br> Fahrwerk</a></h3>
