--- a/sponsoren.html
+++ b/sponsoren.html
@@ -128,7 +128,7 @@
                     </a>
                 </article>
                 <article class="4u special">
-                    <a href="http://de.nanotec.com/" target="_blank" class="image featured"><img src="images/Sponsoren/nanotec_logo.PNG" alt="" />
+                    <a href="http://de.nanotec.com/" target="_blank" class="image featured"><img src="images/Sponsoren/nanotec_logo.png" alt="" />
                     </a>
                 </article>
             </div>
