--- a/team_elektronik_software.html
+++ b/team_elektronik_software.html
@@ -133,18 +133,18 @@
                         var path = new Array();
 
                         // LIST OF IMAGES
-                        path[0] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/1.JPG";
-                        path[1] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/2.JPG";
-                        path[2] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/3.JPG"
-                        path[3] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/4.JPG";
-                        path[4] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/5.JPG";
-                        path[5] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/6.JPG";
-                        path[6] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/7.JPG";
-                        path[7] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/8.JPG";
-                        path[8] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/9.JPG";
-                        path[9] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/10.PNG";
-                        path[10] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/11.PNG";
-                        path[11] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/12.PNG";
+                        path[0] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/1.jpg";
+                        path[1] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/2.jpg";
+                        path[2] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/3.jpg"
+                        path[3] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/4.jpg";
+                        path[4] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/5.jpg";
+                        path[5] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/6.jpg";
+                        path[6] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/7.jpg";
+                        path[7] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/8.jpg";
+                        path[8] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/9.jpg";
+                        path[9] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/10.png";
+                        path[10] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/11.png";
+                        path[11] = "images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/12.png";
 
                         function swapImage() {
                             document.slide.src = path[i];
@@ -154,7 +154,7 @@
                         }
                         window.onload = swapImage;
                     </script>
-                    <img class="image fit" name="slide" src="images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/1.JPG" width="400" />
+                    <img class="image fit" name="slide" src="images/Arbeitsergebnisse/Team_Elektronik_Software/Slideshow/1.jpg" width="400" />
                 </article>
 
             <hr id="ug_GUI">
