--- a/team_kamerasteuerung.html
+++ b/team_kamerasteuerung.html
@@ -98,7 +98,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/Kamerasteuerung.JPG" />
+                            <img class="image fit" src="images/Gruppenbilder/Kamerasteuerung.jpg" />
                         </article>
 
                     </section>
@@ -137,35 +137,35 @@
                         var path = new Array();
 
                         // LIST OF IMAGES
-                        path[0] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/1.JPG";
-                        path[1] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/2.JPG";
-                        path[2] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/3.JPG"
-                        path[3] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/4.JPG";
-                        path[4] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/5.JPG";
-                        path[5] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/6.JPG";
-                        path[6] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/7.JPG";
-                        path[7] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/8.JPG";
-                        path[8] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/9.JPG";
-                        path[9] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/10.JPG";
-                        path[10] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/11.JPG";
-                        path[11] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/12.JPG";
-                        path[12] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/13.JPG";
-                        path[13] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/14.JPG";
-                        path[14] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/15.JPG";
-                        path[15] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/16.JPG";
-                        path[16] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/17.JPG";
-                        path[17] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/18.JPG";
-                        path[18] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/19.JPG";
-                        path[19] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/20.JPG";
-                        path[20] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/21.JPG";
-                        path[21] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/22.JPG";
-                        path[22] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/23.JPG";
-                        path[23] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/24.JPG";
-                        path[24] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/25.JPG";
-                        path[25] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/26.JPG";
-                        path[26] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/27.JPG";
-                        path[27] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/28.JPG";
-                        path[28] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/29.JPG";
+                        path[0] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/1.jpg";
+                        path[1] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/2.jpg";
+                        path[2] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/3.jpg"
+                        path[3] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/4.jpg";
+                        path[4] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/5.jpg";
+                        path[5] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/6.jpg";
+                        path[6] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/7.jpg";
+                        path[7] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/8.jpg";
+                        path[8] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/9.jpg";
+                        path[9] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/10.jpg";
+                        path[10] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/11.jpg";
+                        path[11] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/12.jpg";
+                        path[12] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/13.jpg";
+                        path[13] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/14.jpg";
+                        path[14] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/15.jpg";
+                        path[15] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/16.jpg";
+                        path[16] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/17.jpg";
+                        path[17] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/18.jpg";
+                        path[18] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/19.jpg";
+                        path[19] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/20.jpg";
+                        path[20] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/21.jpg";
+                        path[21] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/22.jpg";
+                        path[22] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/23.jpg";
+                        path[23] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/24.jpg";
+                        path[24] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/25.jpg";
+                        path[25] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/26.jpg";
+                        path[26] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/27.jpg";
+                        path[27] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/28.jpg";
+                        path[28] = "images/Arbeitsergebnisse/Team_Kamerasteuerung/Slideshow/29.jpg";
 
 
 
