--- a/team_mechanik_arm.html
+++ b/team_mechanik_arm.html
@@ -98,7 +98,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/Arm.JPG" />
+                            <img class="image fit" src="images/Gruppenbilder/Arm.jpg" />
                         </article>
 
                     </section>
@@ -135,20 +135,20 @@
                         var path = new Array();
 
                         // LIST OF IMAGES
-                        path[0] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/1.JPG";
-                        path[1] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/2.JPG";
-                        path[2] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/3.JPG"
-                        path[3] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/4.JPG";
-                        path[4] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/5.JPG";
-                        path[5] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/6.JPG";
-                        path[6] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/7.JPG";
-                        path[7] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/8.JPG";
-                        path[8] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/9.JPG";
-                        path[9] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/11.JPG";
-                        path[10] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/12.JPG";
-                        path[11] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/13.JPG";
-                        path[12] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/14.JPG";
-                        path[13] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/15.JPG";
+                        path[0] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/1.jpg";
+                        path[1] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/2.jpg";
+                        path[2] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/3.jpg"
+                        path[3] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/4.jpg";
+                        path[4] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/5.jpg";
+                        path[5] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/6.jpg";
+                        path[6] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/7.jpg";
+                        path[7] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/8.jpg";
+                        path[8] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/9.jpg";
+                        path[9] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/11.jpg";
+                        path[10] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/12.jpg";
+                        path[11] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/13.jpg";
+                        path[12] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/14.jpg";
+                        path[13] = "images/Arbeitsergebnisse/Team_Arm/Slideshow/15.jpg";
 
 
 
@@ -160,7 +160,7 @@
                         }
                         window.onload = swapImage;
                     </script>
-                    <img class="image fit" name="slide" src="images/Arbeitsergebnisse/Team_Arm/Slideshow/1.JPG" width="400" />
+                    <img class="image fit" name="slide" src="images/Arbeitsergebnisse/Team_Arm/Slideshow/1.jpg" width="400" />
                 </article>
             </article>
             <hr>
