--- a/team_tueroeffner.html
+++ b/team_tueroeffner.html
@@ -138,29 +138,29 @@
                         var path = new Array();
 
                         // LIST OF IMAGES
-                        path[0] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/1.JPG";
-                        path[1] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/2.JPG";
-                        path[2] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/3.JPG"
-                        path[3] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/4.JPG";
-                        path[4] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/5.JPG";
-                        path[5] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/6.JPG";
-                        path[6] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/7.JPG";
-                        path[7] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/8.JPG";
-                        path[8] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/9.JPG";
-                        path[9] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/10.JPG";
-                        path[10] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/11.JPG";
-                        path[11] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/12.JPG";
-                        path[12] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/13.JPG";
-                        path[13] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/14.JPG";
-                        path[14] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/15.JPG";
-                        path[15] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/16.JPG";
-                        path[16] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/17.JPG";
-                        path[17] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/18.JPG";
-                        path[18] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/19.JPG";
-                        path[19] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/20.JPG";
-                        path[20] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/11.JPG";
-                        path[21] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/22.JPG";
-                        path[22] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/23.JPG";
+                        path[0] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/1.jpg";
+                        path[1] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/2.jpg";
+                        path[2] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/3.jpg"
+                        path[3] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/4.jpg";
+                        path[4] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/5.jpg";
+                        path[5] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/6.jpg";
+                        path[6] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/7.jpg";
+                        path[7] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/8.jpg";
+                        path[8] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/9.jpg";
+                        path[9] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/10.jpg";
+                        path[10] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/11.jpg";
+                        path[11] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/12.jpg";
+                        path[12] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/13.jpg";
+                        path[13] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/14.jpg";
+                        path[14] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/15.jpg";
+                        path[15] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/16.jpg";
+                        path[16] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/17.jpg";
+                        path[17] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/18.jpg";
+                        path[18] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/19.jpg";
+                        path[19] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/20.jpg";
+                        path[20] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/11.jpg";
+                        path[21] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/22.jpg";
+                        path[22] = "images/Arbeitsergebnisse/Team_Tueroeffner/Slideshow/23.jpg";
 
 
                         function swapImage() {
