--- a/team_organisation_finanzen.html
+++ b/team_organisation_finanzen.html
@@ -97,7 +97,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/Kamerasteuerung.JPG" />
+                            <img class="image fit" src="images/Gruppenbilder/Kamerasteuerung.jpg" />
                         </article>
 
                     </section>
