--- a/team_tueroeffner.html
+++ b/team_tueroeffner.html
@@ -98,7 +98,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="images/Gruppenbilder/Tueroeffner.jpg" />
+                            <img class="image fit" src="images/Gruppenbilder/Tueroeffner.png" />
                         </article>
 
                     </section>
